# ihhashi

./: .env.docker  .env.example  .gitignore  .profile  AGENTS.md  AGENT_COST_ANALYSIS.md  AUDIT_REPORT.md  AUTO_DEPLOY_SETUP.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SETUP.sh  DEPLOY.md  DEPLOYMENT_DONE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.sh  FINAL_AUDIT_REPORT.md  FINAL_VERIFICATION_REPORT.md  FIXES_SUMMARY.md  KIMI_SIMPLE_PROMPT.txt  KIMI_WEBSITE_PROMPT.md  MONGODB_CONFIG_COMPLETE.txt  MONGODB_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SETUP_COMPLETE.md  SWARM.md  TESTING_GUIDE.md  ao-config.yaml  docker-compose.yml  ihhashi-release-signed.apk.idsig  ihhashi.keystore  index.html  netlify.toml  netlify.toml.backup  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  db.py  main.py  supabase_client.py
backend/celery_worker/: tasks.py
backend/models/: __init__.py  delivery_pricing.py  merchant.py  order.py  product_template.py  review.py  rider.py  tip.py  trial.py  user.py  verification.py
backend/scripts/: seed_data.py  seed_database.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_concurrent_matching.py  test_config.py  test_customer_rewards.py  test_matching.py  test_merchants.py  test_orders.py  test_payments.py  test_quantum_dispatch.py  test_referrals.py  test_utils.py  test_webhook_replay.py  test_websocket.py
(+1112 files in other folders)
